SC[UNIONVMS] - fixed bug in combobox multiple feature, fixed sorting and visibility of columns in vms exporting tables
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/unionvms-web@9095 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/app/directive/common/combobox/combobox.less
+++ b/app/directive/common/combobox/combobox.less
@@ -77,9 +77,23 @@
 	}
 }
 
+.combobox .dropdown {
+	button.btn.btn-default.dropdown-toggle {
+		padding: 3px 20px 3px 12px;
+		position: relative;
+		.caret {
+			position: absolute;
+		    top: 50%;
+		    right: 10px;
+		    float: none;
+		    bottom: initial;
+		}
+	}
+}
+
 .combobox.combo-multiple {
 	button.btn.btn-default.dropdown-toggle {
-		min-height: 35px;
+		min-height: 41px;
 		height: auto;
 		padding: 3px 20px 3px 3px;
 		.selected-options {
